[package]
name = "docker-rs"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.24"
base64 = "0.11.0"
hyper = { version = "0.13.2", features = ["stream"] }
hyperlocal = { git = "https://github.com/softprops/hyperlocal" }
http = "0.2.0"

tokio = { version = "0.2.11", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = { version = "0.3.4", features = ["async-await"] }
futures-core = { version = "0.3.4" }
futures-util = "0.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_qs = "0.5.2"
